--- a/.github/workflows/update-sentiment.yml
+++ b/.github/workflows/update-sentiment.yml
@@ -32,6 +32,6 @@ jobs:
         run: |
           git config --global user.name 'GitHub Actions'
           git config --global user.email 'actions@github.com'
-          git add data.csv page.html
+          git add data.csv page.html page_text.txt
           git commit -m 'Automated update: Added new client sentiment data' || echo "No changes to commit"
           git push
